--- a/css/_pgbackup/styles_1469445031.css
+++ b/css/_pgbackup/styles_1469445031.css
@@ -158,14 +158,12 @@ footer
     -webkit-transition: padding .2s ease-in;
     -moz-transition: padding .2s ease-in;
     transition: padding 0.2s ease-in;
-    font-size: 18px;
-    height: 50px;
 }
 
 .navbar-header > .navbar-brand:hover,
 .navbar-header > .navbar-brand:focus
 {
-    color: #4299ed;
+    color: #8B27B0;
 }
 
 .navbar-default .navbar-toggle:focus,
@@ -186,19 +184,19 @@ footer
     text-transform: uppercase;
     font-size: 13px;
     font-weight: 700;
-    color: #ffffff;
+    color: #000000;
 }
 
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus:hover
 {
-    color: #4299ed;
+    color: #00519E;
 }
 
 .navbar-default .nav > li.active > a,
 .navbar-default .nav > li.active > a:focus
 {
-    color: #005eb8;
+    color: #386895 !important;
     background-color: transparent;
 }
 
@@ -224,12 +222,12 @@ footer
     .navbar-default .navbar-header .navbar-brand:hover,
     .navbar-default .navbar-header .navbar-brand:focus
     {
-        color: #4299ed;
+        color: #005EB8;
     }
     .navbar-default .nav > li > a,
     .navbar-default .nav > li > a:focus
     {
-        color: rgba(245, 245, 245, 0.8);
+        color: rgba(0, 0, 0, 0.8);
         padding: 20px;
         letter-spacing: 1.1px;
         text-shadow: 1px 1px 1px rgba(60, 60, 60, 0.7);
@@ -237,7 +235,7 @@ footer
     .navbar-default .nav > li > a:hover,
     .navbar-default .nav > li > a:focus:hover
     {
-        color: #4299ed;
+        color: #000eb5;
     }
     .navbar-default.affix
     {
@@ -246,9 +244,10 @@ footer
     }
     .navbar-default.affix .navbar-header .navbar-brand
     {
-        font-size: 18px;
+        font-size: 15px;
         color: #005EB8;
-        padding: 19px;
+        padding: 20px;
+        letter-spacing: 1px;
     }
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus
@@ -258,12 +257,13 @@ footer
     .navbar-default.affix .nav > li > a,
     .navbar-default.affix .nav > li > a:focus
     {
+        color: #DDD;
         text-shadow: 1px 1px 1px rgba(30, 30, 30, 0.7);
     }
     .navbar-default.affix .nav > li > a:hover,
     .navbar-default.affix .nav > li > a:focus:hover
     {
-        color: #4299ed;
+        color: #005EB8;
     }
 }
 
@@ -274,14 +274,13 @@ header
     text-align: center;
     color: #FFF;
     width: 100%;
-    background-color: #000000;
-    background-image: url('../img/Sandbox_small.jpg');
+    background-color: #C9C9C9;
+    background-image: url('https://splashbase.s3.amazonaws.com/lifeofpix/regular/Life-of-Pix-free-stock-photos-Slate-Stone-Xeromatic-1440x953.jpg');
+    background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    -o-background-size: cover;
 }
 
 header .header-content
@@ -491,12 +490,11 @@ textarea
 .btn-default
 {
     border-color: #FFF;
-    color: #dddddd;
-    background-color: rgba(255, 255, 255, 0);
+    color: #222;
+    background-color: #FFF;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all 0.35s;
-    border: 1px solid white;
 }
 
 .btn-default:hover,
@@ -508,7 +506,7 @@ textarea
 {
     border-color: #EDEDED;
     color: #222;
-    background-color: #ffffff;
+    background-color: #F2F2F2;
     opacity: 0.7;
 }
 
@@ -566,7 +564,7 @@ fieldset[disabled] .btn-default.active
 
 .btn
 {
-    border: 1px solid white;
+    border: 0;
     border-radius: 290px;
     font-family: 'Helvetica Neue', Arial, sans-serif;
 }
